# jscc

./: .gitignore  README.md  audit_o5_protocol_difference.py  codex_development_instructions.md  compare_oracle_csi.py  diagnose_clean_end_to_end.py  diagnose_g0_architecture_screening.py  diagnose_g0_exposure_normalized.py  diagnose_g1_mapping_equivalence.py  diagnose_j2_barrage_boundary.py  diagnose_j3_narrowband_boundary.py  diagnose_j4_burst_boundary.py  diagnose_j4_tail_failure.py  diagnose_j5_pilot_boundary.py  diagnose_o5_root_cause.py  diagnose_stage1_content_generalization.py  diagnose_stage1_random_distribution.py  eval_channel_estimator.py  eval_channel_free_conv_conformer.py  eval_channel_free_feasibility.py  eval_channel_model.py  eval_clean_channel_ladder.py  eval_codec_only.py  eval_j5_pilot_diagnostics.py  eval_j5_waveform_bridge.py  eval_jamming.py  eval_layer_ablation.py  eval_speechtokenizer.py  eval_waveform_aware_wireless.py  evaluate_fdd_temporal_csi.py  evaluate_stage1_readiness.py  infer_jscc_wav.py  overfit_stage1_path.py  paired_eval.py  pyproject.toml  requirements.freeze.backup.txt  requirements.txt  select_j2_initialization.py  speech_jscc_design.tex  train_channel_free_conv_conformer.py  (+7 more)
configs/: channel_free_feasibility.yaml  channel_free_revalidation.yaml  codec_only_baseline.yaml  conv_conformer_clean_end_to_end.yaml  conv_conformer_integration_v1.yaml  conv_conformer_j2_strong_barrage.yaml  conv_conformer_j3_random_narrowband.yaml  conv_conformer_j4_random_burst.yaml  conv_conformer_j5_pilot_targeted.yaml  eval.yaml  fdd_temporal_csi.yaml  (+12 more)
(+784 files in other folders)
