[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-jscc"
version = "0.1.0"
description = "Continuous-representation speech JSCC under Rayleigh fading and jamming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "soundfile>=0.12",
  "torch>=2.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
audio-metrics = ["pystoi>=0.4"]
speechtokenizer = [
  "beartype>=0.22",
  "einops>=0.8",
  "speechtokenizer>=1.0.1",
  "tensorboard>=2.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: tests that exercise large optional models or long CPU paths",
]
